# af-iclme

./: .gitignore  Makefile  docker-compose-ai-comp-stack-dev.yml  docker-compose.generated.yml
app/ingress/api/: customer.db  main.py  pyproject.toml
app/ingress/api/routes/onboarding/: routes.yml
capabilities/db/: README.txt
capabilities/db_old/: engine.py  main.py  session.py
docs/: AF_ICLME.md  AF_ICLME_1.md
execution-plans/: exe_plan_template_01 copy.md  exe_plan_template_01.md
execution-plans/already_run/: 02_exe_plan_template_01.md  03_exe_plan_template_prompt.md  04_plan_template_prompt.md  05_exe_plan_template_prompt.md  06_exe_plan_template_prompt.md  07_exe_plan_template_prompt.md  08_exe_plan_template_prompt.md  10_exe_plan_template_prompt.md  11_exe_plan_template_prompt.md  12_exe_plan_template_prompt.md  13_exe_plan_template_prompt.md  14_exe_plan_template_prompt.md  16_exe_plan_template_prompt.md  17_exe_plan_template_prompt.md  18_exe_plan_template_prompt.md  19_exe_plan_template_prompt.md  20_exe_plan_template_prompt.md  21_exe_plan_template_prompt.md  22_exe_plan_template_prompt.md  23_exe_plan_template_prompt.md  24_exe_plan_template_prompt.md  25_exe_plan_template_prompt.md  26_exe_plan_template_prompt.md  27_exe_plan_template_prompt.md  29_exe_plan_template_prompt.md  30_exe_plan_template_prompt.md  31_exe_plan_template_prompt.md  34_exe_plan_template_prompt.md  35_exe_plan_template_prompt.md  36_exe_plan_template_prompt.md  37_exe_plan_template_prompt.md  38_exe_plan_template_prompt.md  39_exe_plan_template_prompt.md  (+26 more)
(+633 files in other folders)
